updated notebook, added some imgs

--- a/notebooks/ann-introduction.ipynb
+++ b/notebooks/ann-introduction.ipynb
@@ -127,6 +127,8 @@
     "    new_weights = []\n",
     "    for i, x in enumerate(given_input):\n",
     "\n",
+    "        # if the expected output is greater than the observed output, make the weight smaller\n",
+    "        # if the expected output is lesser than the observed output, make the weight bigger\n",
     "        new_weight = input_weights[i] + (expected_output - perceptron_output) * x * learning_rate\n",
     "        new_weights.append(new_weight)\n",
     "    return np.array(new_weights)\n",
@@ -442,7 +444,27 @@
    "source": [
     "## Recapping: What did we just do?\n",
     "\n",
-    "__TODO put visualization of our toy network here__\n"
+    "1. Start with a problem that is of a predefined dimensionality \n",
+    "    - input is a vector (1x2 vector of 0 or 1) in the case of our \"logical OR\" problem\n",
+    "    - output is scalar (0 or 1)\n",
+    "\n",
+    "2. Create a processing unit that can handle a problem that is of that dimensionality \n",
+    "    - 1x2 vector of randomly initialized weights\n",
+    "    - 1 bias weight \n",
+    "    - a stepwise activation function \n",
+    "\n",
+    "3. Create a way to adjust the weights after data are processed\n",
+    "    - in this case, we are taking the error output and changing the weights that contributed to the error, as defined in our `adjust_weights` function: \n",
+    "    ```python\n",
+    "        # if the expected output is greater than the observed output, make the weight smaller\n",
+    "        # if the expected output is lesser than the observed output, make the weight bigger\n",
+    "        new_weight = input_weights[i] + (expected_output - perceptron_output) * x * learning_rate\n",
+    "    ```\n",
+    "\n",
+    "    This is one example of a _cost function_ , or _loss function_.  A neural network (or other classifier) _learns_ by optimizing a cost function so that it's at a minimum.  In the network's case, it does this by making incremental changes to the weight parameters.  \n",
+    "    \n",
+    "    How does this work, in more complex, less trivial networks?\n",
+    "\n"
    ]
   },
   {
@@ -450,11 +472,11 @@
    "metadata": {},
    "source": [
     "## Some problems with Simple Perceptrons (simple neurons with stepwise or linear activation functions)\n",
-    "TODO do i really need this detail\n",
+    "\n",
     "\n",
     "The basic perceptron as we implemented it above is very old. In the decades between 1957 and now, there has been a lot of evolution in neural networks, but a few of the big, early problems with neural networks were as follows:\n",
     "\n",
-    "1. Perceptrons can't solve problems whose answers aren't linearly separable - that is, more complicated relationships in the patterns of data, that aren't easily delineated by a line on a chart, aren't easily caught.\n",
+    "1. A single Perceptron can't solve problems whose answers aren't linearly separable - that is, more complicated relationships in the patterns of data, that aren't easily delineated by a line on a chart, and aren't easily caught.\n",
     "\n",
     "2. There's no simple way to adjust the weights during learning for more than one layer of them\n",
     "\n",
@@ -544,7 +566,6 @@
    ],
    "source": [
     "# example of an \"XOR\" problem, which does NOT have a linearly separable solution:\n",
-    "\n",
     "xor_features = np.array([[0, 0],\n",
     "                    [0, 1],\n",
     "                    [1, 0],\n",
@@ -554,8 +575,6 @@
     "                    [1],\n",
     "                    [0]])\n",
     "\n",
-    "\n",
-    "\n",
     "train_perceptron(xor_features, xor_labels, [0.02, 0.34], 0.5, 10, learning_rate=0.05)"
    ]
   },
@@ -563,11 +582,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice how this model does _not_ converge!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "## Solutions to these problems:\n",
-    "1. Changing the activation function\n",
-    "    \n",
-    "2. Backpropagation algorithm\n"
+    "## Solution to some of the early problems with neural nets:\n",
+    "\n",
+    "- __Add more neurons, and layers of neurons to the network__\n",
+    "\n",
+    "    <img src=\"Colored_neural_network.svg.png\" style=\"background-color: #fff\"/>\n",
+    "\n",
+    "- __Backpropagation algorithm__\n",
+    "\n",
+    "- Have a nonlinear activation function.  Implementing the backpropagation algorithm efficiently means being able to differentiate the activation function. Change the activation function.  The sigmoid activation function was one of the first that was adopted, and choice of the activation function, more generally, can be an important hyperparameter choice when training a model.\n",
+    "\n",
+    "    ![image](sigmoid.png \"sigmoid function\")\n",
+    "\n",
+    "\n",
+    "## End Result:\n",
+    "\n",
+    "The result of the choices of multiple layers of neurons, and nonlinear activation functions, is what differentiates modern neural networks from the earlier perceptrons.  The backpropagation algorithm allows for meaningful updates to multiple layers of input neurons, based on the error output.  It allows us to meaningfully change the weights of hidden layers and not just a single vector. \n",
+    "\n",
+    "    https://www.youtube.com/watch?v=IHZwWFHWa-w&t=310s\n",
+    "\n",
+    "If this kind of iterative optimization is visualized in 3 dimensions, it can be thought Of as traversing a slope, trying to find the deepest possible 'trough': \n",
+    "\n",
+    "This kind of iterative traversal of the parameter space, with the y-axis parameter being the value of the cost function (in an attempt to minimize it), is called _gradient descent_. A fully connected neural network will have converged when, on successive iterations of learning, its space on the error gradient ceases to change significantly with successive learning batches.\n",
+    "\n"
    ]
   },
   {
@@ -633,33 +678,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model to work.\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# NOTES:\n",
     "\n",
-    "The notes on loss functions and gradient descent, they come from 3-blue-1-brown's great video on the topic\n",
+    "Several of the notes on loss functions and gradient descent, they come from [3-blue-1-brown's great video](https://www.youtube.com/watch?v=IHZwWFHWa-w) on the topic. \n",
     "\n",
-    "Several of the images and code examples in this notebook come from, or are adapted from, Hobson Lane et al.'s\\ text: \n",
+    "Several of the images and code examples in this notebook are adapted from Hobson Lane et al.'s\\ text: \n",
     "\n",
     "[Natural Language Processing in Action](https://www.manning.com/books/natural-language-processing-in-action)\n",
     "\n",
-    "If you are interested in NLP and machine learning in general, this is a great book.  It was written by members of Portland's own local Data Science Meetup group.  "
+    "If you are interested in NLP and machine learning in general, this is a great book.  It was written by members of Portland's own local Data Science Meetup group.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Activation_function\n",
+    "Rosenblatt, 1957 [The Perceptron: A Perceiving and Recognizing Automaton](https://blogs.umass.edu/brain-wars/files/2016/03/rosenblatt-1957.pdf)\n",
+    "Minsky and Papert, 1969 [Perceptrons: An Introduction to Computational Geometry](https://direct.mit.edu/books/book/3132/PerceptronsAn-Introduction-to-Computational)\n",
+    "\n",
+    "\n",
+    "### Image attributions\n",
+    "\n",
+    "By Qef (talk) - Created from scratch with gnuplot, Public Domain, https://commons.wikimedia.org/w/index.php?curid=4310325\n",
+    "By Ringdongdang - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=95947821"
    ]
   },
   {
