more copy updates, fix depdency

--- a/notebooks/ann-introduction.ipynb
+++ b/notebooks/ann-introduction.ipynb
@@ -408,9 +408,11 @@
     "\n",
     "The result of the choices of multiple layers of neurons, and nonlinear activation functions, is what differentiates modern neural networks from the earlier perceptrons.  The backpropagation algorithm allows for meaningful updates to multiple layers of input neurons, based on the error output.  It allows us to meaningfully change the weights of hidden layers and not just a single vector. \n",
     "\n",
-    "    https://www.youtube.com/watch?v=IHZwWFHWa-w&t=310s\n",
+    "[short video on optimizing a loss function](https://www.youtube.com/watch?v=IHZwWFHWa-w&t=310s)\n",
     "\n",
-    "If this kind of iterative optimization is visualized in 3 dimensions, it can be thought Of as traversing a slope, trying to find the deepest possible 'trough': \n",
+    "If this kind of iterative optimization is visualized in 3 dimensions, it can be thought Of as traversing a slope, trying to find the deepest possible 'trough', or zigzagging across a topographical map: \n",
+    "\n",
+    "[Some 2- and 3-d visualizations of gradient descent](https://smunix.github.io/en.wikipedia.org/wiki/Gradient_descent.html)\n",
     "\n",
     "This kind of iterative traversal of the parameter space, with the y-axis parameter being the value of the cost function (in an attempt to minimize it), is called _gradient descent_. A fully connected neural network will have converged when, on successive iterations of learning, its space on the error gradient ceases to change significantly with successive learning batches.\n",
     "\n",
@@ -418,7 +420,7 @@
     "\n",
     "Above, one of the things we asked is \"why would we want a neural network to learn more slowly\"?  \n",
     "\n",
-    "- An answer is that one of the problems we sometimes see when we train ANNs is called the \"expanding gradient\" problem.  This is a problem that can occur if learning rates are set too high.  Conceptually, it means that we are \"jumping around\" the error gradient space in big leaps, rather than taking our time and traversing the gradient more slowly. \n",
+    "- An answer is that one of the problems we sometimes see when we train ANNs is called the \"expanding gradient\" problem.  This is a problem that can occur if learning rates are set too high.  Conceptually, it means that we are \"jumping around\" the error gradient space in big leaps, rather than taking our time and traversing the gradient more slowly. This means that the steps either take us away from one of the deep minimal 'troughs' that we want to be in, or have a step size that's too large for us to make the fine-grained parameter changes we need to make to get to the bottom.\n",
     "\n",
     "- There are other permutations in gradient descent algorithms and some are more complex than others\n",
     "    - Randomization in gradient descent (Stochastic gradient descent )\n",
@@ -435,7 +437,9 @@
     "\n",
     "[Keras](https://keras.io/) is a layer of abstraction that provides a fluent API for building neural nets.\n",
     "\n",
-    "Below, we'll try to train a net with multiple neurons and a hidden layer.  We'll see if we get a better result by changing the topology of our net."
+    "Keras, and other machine-learning APIs, give us the ability to manipulate the kinds of hyperparameters like learning rates, and network architecture, at a high level. \n",
+    "\n",
+    "Below, we'll try to train a net with multiple neurons.  We'll see if we get a better result by changing the topology of our net."
    ]
   },
   {
@@ -467,6 +471,30 @@
     "model.add(Dense(1))\n",
     "model.add(Activation('sigmoid'))\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SGD is stochastic gradient descent, which reorganizes the order of training data and updates weights fre\n",
+    "\n",
+    "sgd = SGD(lr=0.1)\n",
+    "model.compile(loss='binary_crossentropy', \n",
+    "    optimizer=sgd,\n",
+    "    metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now let's see if a model can learn XOR\n",
+    "model.fit(x_train, y_train, epochs=500)"
    ]
   },
   {
