--- a/notebooks/ann-introduction.ipynb
+++ b/notebooks/ann-introduction.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "_Neurotransmitters_ in the _synaptic cleft_ instruct the cell to open or close _ion channels_ in the neuron.  Ions travelling in or out of the cell change the the membrane potential, until a point at which an _Action potential_ is achieved, which causes electrical charge to be dissipated down the axon and towards the _postsynaptic neuron_, which starts the process anew for downstream neurons.\n",
     "\n",
-    "![image](bioneuron.png \"a biological neuron\")"
+    "\n",
+    "<img src=\"Neuron.svg\" style=\"background-color:#fff;\" />"
    ]
   },
   {
@@ -33,8 +34,7 @@
     "- a bias term representing the sensitivity of the neuron itself\n",
     "- an activation function\n",
     "\n",
-    "![image](modelneuron.png \"a model neuron\")\n",
-    "\n"
+    "<img src=\"modelneuron.png\" />\n"
    ]
   },
   {
@@ -520,8 +520,13 @@
     "\n",
     "### Image attributions\n",
     "\n",
+    "By User:Dhp1080 - &quot;Anatomy and Physiology&quot; by the US National Cancer Institute&#039;s Surveillance, Epidemiology and End Results (SEER) Program ., CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=1474927\n",
+    "\n",
     "By Qef (talk) - Created from scratch with gnuplot, Public Domain, https://commons.wikimedia.org/w/index.php?curid=4310325\n",
-    "By Ringdongdang - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=95947821"
+    "\n",
+    "By Ringdongdang - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=95947821\n",
+    "\n",
+    "Autorstwa Mayranna - Praca własna, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=30128320"
    ]
   }
  ],
